# PythonMaterial

./: .pre-commit-config.yaml  pyproject.toml
python3/01_Introduction/: 0_python_installation_in_redhat_linux.sh  e_bulit_in_functions.txt
python3/02_Basics/01_Arithmetic_Operations/: arithmetic_operations.ipynb  l_complex_numbers_ops.ipynb
python3/02_Basics/02_String_Operations/: c_string_indexing.py  e_string_slicing.py  t_string_module.py
python3/03_Language_Components/01_Relational_Operations/: a_relational_operations.py
python3/03_Language_Components/02_Logical_Operations/: a_logical_operations.py  b_logical_operations.py
python3/03_Language_Components/03_Boolean_Operations/: c_bool_function.py
python3/03_Language_Components/04_Bitwise_Operations/: a_bitwise_operations.py
python3/03_Language_Components/05_Identity_Operations/: a_identity_operations.py
python3/04_Exceptions/: 14_exception_groups.py
python3/06_Collections/: Collections___sets_n_Dictionaries.ipynb  comprehensions_ex.py  iterable_operations.py
python3/08_Decorators/: Decorators.ipynb
python3/15_Regular_Expressions/: a_re_match.py  c_re_match_IgnoreCase.py  d_re_search.py  e_re_search.py  f_two_ways_of_regex.py  i_limit_pattern_characters.py  ja_greedy_patterns.py  jb_non_greedy_patterns.py  kc_re_findall.py  p_re_split.py  r_iLmsux_FLAGS.py  s_look_assertions.py  t_re_unicode.py  u_regex_module.py
python3/Projects/: icc_cricket-notifications.py
python3/Python-Internals/: weak_reference.py
python3/SOLID-design-principles/: e_Dependency_Inversion_Principle.py
(+186 files in other folders)
