[tool.poetry]
name = "pythonmaterial"
version = "0.1.0"
description = "Python Learning Material"
authors = ["udhay Prakash <uday3prakash@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
requests = "^2.28.1"
jupyter = "^1.0.0"
ipython = "^8.5.0"


[tool.poetry.group.dev.dependencies]
nbconvert = {extras = ["webpdf"], version = "^7.2.5"}
setuptools = "^67.4.0"
pyclean = "^2.7.0"
pylint = "^2.17.4"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
